# features/api/v1/projects/projectsHandler.ts
@@ -118,10 +118,11 @@ export async function updateProject(
 }
 
 export async function updateProjectMedium(
-  projectMediumId: string,
+  projectId: string,
+  mediumId: string,
   updates: z.infer<typeof UpdateProjectMediumSchema>,
 ): Promise<ApiResponse<null>> {
-  await projectsService.updateProjectMedium(projectMediumId, updates);
+  await projectsService.updateProjectMedium(mediumId, updates);
 
   return {
     success: true,
